cmake_minimum_required(VERSION 3.29)
project(Assignment1 C)

set(CMAKE_C_STANDARD 11)

add_executable(
        Assignment1
        ## Q1
#        src/q1/question1.c

        ## Q2
#        src/q2/assignment.c
#        src/q2/linkedList.c
#        src/q2/tests.c

        ## Q3
        src/q3/genericLinkedList.c
        src/q3/genericLinkedList.h
        src/q3/gllTest.c
)
